# self_edu

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
application/: admin.py  models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
application/migrations/: 0001_initial.py  0002_alter_chapter_options_alter_material_options.py  0003_alter_material_course_question_answer.py  0004_alter_answer_options_alter_question_options_and_more.py  0005_subscription.py  0006_alter_answer_options_remove_answer_is_correct_and_more.py  0007_remove_question_answer_remove_question_choices_and_more.py  0008_rename_course_material_chapter.py
config/: settings.py  urls.py
users/: models.py  permissions.py  serializers.py  tests.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_city_remove_user_tg_id.py
